Put desc to bottom of buttons

--- a/lang/main-ar.json
+++ b/lang/main-ar.json
@@ -255,6 +255,7 @@
         "shareVideoLinkError": "يرجى تقديم رابط يوتيوب صحيح.",
         "shareVideoTitle": "مشاركة فيديو",
         "shareYourScreen": "",
+        "shareScreen": "",
         "shareYourScreenDisabled": "",
         "shareYourScreenDisabledForGuest": "",
         "startLiveStreaming": "ابدأ البث المباشر",
@@ -659,6 +660,7 @@
         "profile": "تحرير ملفك التعريفي",
         "raiseHand": "ارفع / اخفض يدك",
         "raiseYourHand": "ارفع يدك",
+        "raiseYourHandText": "",
         "Settings": "الإعدادات",
         "sharedvideo": "مشاركة فيديو يوتيوب",
         "shareRoom": "",
