--- a/lang/main-es.json
+++ b/lang/main-es.json
@@ -282,6 +282,7 @@
         "shareVideoLinkError": "Por favor introduzca un enlace correcto de Youtube.",
         "shareVideoTitle": "Compartir un vídeo",
         "shareYourScreen": "Compartir su pantalla",
+        "shareScreen": "Compartir pantalla",
         "shareYourScreenDisabled": "Pantalla compartida desactivada.",
         "shareYourScreenDisabledForGuest": "Los huéspedes no pueden compartir la pantalla.",
         "startLiveStreaming": "Iniciar transmisión en vivo",
@@ -732,6 +733,7 @@
         "profile": "Editar tu perfil",
         "raiseHand": "Levantar / Bajar tu mano",
         "raiseYourHand": "Alzar la mano",
+        "raiseYourHandText": "Alzar mano",
         "security": "Opciones de seguridad",
         "Settings": "Ajustes",
         "sharedvideo": "Compartir un vídeo de YouTube",
