--- a/lang/main-esUS.json
+++ b/lang/main-esUS.json
@@ -281,6 +281,7 @@
         "shareVideoLinkError": "Proporciona un enlace de YouTube correcto.",
         "shareVideoTitle": "Compartir un video",
         "shareYourScreen": "Compartir su pantalla",
+        "shareScreen": "Compartir pantalla",
         "shareYourScreenDisabled": "Uso compartido de pantalla deshabilitado.",
         "shareYourScreenDisabledForGuest": "Los invitados no pueden compartir la pantalla.",
         "startLiveStreaming": "Iniciar transmisión en vivo",
@@ -733,6 +734,7 @@
         "profile": "Editar el perfil",
         "raiseHand": "Levantar/bajar la mano",
         "raiseYourHand": "Levantar la mano",
+        "raiseYourHandText": "",
         "security": "Opciones de seguridad",
         "Settings": "Configuración",
         "sharedvideo": "Compartir un video de YouTube",
