--- a/lang/main-fa.json
+++ b/lang/main-fa.json
@@ -239,6 +239,7 @@
         "shareVideoLinkError": "",
         "shareVideoTitle": "",
         "shareYourScreen": "",
+        "shareScreen": "",
         "shareYourScreenDisabled": "",
         "shareYourScreenDisabledForGuest": "",
         "startLiveStreaming": "",
@@ -628,6 +629,7 @@
         "profile": "",
         "raiseHand": "بلند کردن دست یا پایین آوردن",
         "raiseYourHand": "",
+        "raiseYourHandText": "",
         "Settings": "",
         "sharedvideo": "",
         "shareRoom": "دعوت دیگران",
