--- a/lang/main-fr.json
+++ b/lang/main-fr.json
@@ -281,6 +281,7 @@
         "shareVideoLinkError": "Fournissez s'il vous plaît un lien Youtube fonctionnel.",
         "shareVideoTitle": "Partager une vidéo",
         "shareYourScreen": "Partagez votre écran",
+        "shareScreen": "Partagez écran",
         "shareYourScreenDisabled": "Le partage d’écran est désactivé.",
         "shareYourScreenDisabledForGuest": "Les invités ne peuvent partager l'écran.",
         "startLiveStreaming": "Démarrer la diffusion en direct",
@@ -720,6 +721,7 @@
         "profile": "Éditer votre profil",
         "raiseHand": "Lever / Baisser la main",
         "raiseYourHand": "Lever la main",
+        "raiseYourHandText": "Lever main",
         "Settings": "Paramètres",
         "sharedvideo": "Partager une vidéo YouTube",
         "shareRoom": "Inviter quelqu'un",
