--- a/lang/main-it.json
+++ b/lang/main-it.json
@@ -233,6 +233,7 @@
         "shareVideoLinkError": "Fornire un link youtube corretto.",
         "shareVideoTitle": "Condividi un video",
         "shareYourScreen": "Condividi schermo",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Condivisione schermo disabilitata.",
         "shareYourScreenDisabledForGuest": "Gli ospiti non possono condividere lo schermo.",
         "startLiveStreaming": "Inizia una diretta",
@@ -601,6 +602,7 @@
         "profile": "Modifica profilo",
         "raiseHand": "Alza / Abbassa la mano",
         "raiseYourHand": "Alza la mano",
+        "raiseYourHandText": "Alza mano",
         "Settings": "Impostazioni",
         "sharedvideo": "Condividi un video Youtube",
         "shareRoom": "Invita partecipante",
