--- a/lang/main-ja.json
+++ b/lang/main-ja.json
@@ -231,6 +231,7 @@
         "shareVideoLinkError": "正しいYouTubeのリンクを提供してください。",
         "shareVideoTitle": "動画を共有する",
         "shareYourScreen": "画面を共有する",
+        "shareScreen": "",
         "shareYourScreenDisabled": "",
         "shareYourScreenDisabledForGuest": "",
         "startLiveStreaming": "ライブストリームを開始する",
@@ -598,6 +599,7 @@
         "profile": "プロファイル編集",
         "raiseHand": "手を上げる / 下げる",
         "raiseYourHand": "手を挙げる",
+        "raiseYourHandText": "手を挙げる",
         "Settings": "設定",
         "sharedvideo": "YouTube動画を共有する",
         "shareRoom": "誰かを招待する",
