--- a/lang/main-oc.json
+++ b/lang/main-oc.json
@@ -267,6 +267,7 @@
         "shareVideoLinkError": "Se vos plai, provesissètz un ligam Youtube foncional.",
         "shareVideoTitle": "Partejar una vidèo",
         "shareYourScreen": "Partejar vòstre ecran",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Lo partiment d’ecran es desactivat.",
         "shareYourScreenDisabledForGuest": "Los convits pòdon pas partejar l’ecran.",
         "startLiveStreaming": "Aviar una difusion en dirècte",
@@ -677,6 +678,7 @@
         "profile": "Modificar vòstre perfil",
         "raiseHand": "Demandar / Daissar la paraula",
         "raiseYourHand": "Levar la man",
+        "raiseYourHandText": "Levar la man",
         "Settings": "Paramètres",
         "sharedvideo": "Partejar una vidèo Youtube",
         "shareRoom": "Convidar qualqu’un",
