--- a/lang/main-zhCN.json
+++ b/lang/main-zhCN.json
@@ -244,6 +244,7 @@
         "shareVideoLinkError": "请提供正确的youtube链接。",
         "shareVideoTitle": "分享视频",
         "shareYourScreen": "共享你的屏幕",
+        "shareScreen": "共享你的屏幕",
         "shareYourScreenDisabled": "禁止共享屏幕。",
         "shareYourScreenDisabledForGuest": "访客无法共享屏幕。",
         "startLiveStreaming": "开始直播",
@@ -635,6 +636,7 @@
         "profile": "编辑您的简介",
         "raiseHand": "请求 / 取消 发言",
         "raiseYourHand": "举手",
+        "raiseYourHandText": "举手",
         "Settings": "设置",
         "sharedvideo": "分享YouTube视频",
         "shareRoom": "邀请他人",
