--- a/lang/main.json
+++ b/lang/main.json
@@ -286,6 +286,7 @@
         "shareVideoLinkError": "Please provide a correct youtube link.",
         "shareVideoTitle": "Share a video",
         "shareYourScreen": "Share your screen",
+        "shareScreen": "Share screen",
         "shareYourScreenDisabled": "Screen sharing disabled.",
         "shareYourScreenDisabledForGuest": "Guests can't screen share.",
         "startLiveStreaming": "Start live stream",
@@ -776,6 +777,7 @@
         "profile": "Edit your profile",
         "raiseHand": "Raise / Lower your hand",
         "raiseYourHand": "Raise your hand",
+        "raiseYourHandText": "Raise hand",
         "security": "Security options",
         "Settings": "Settings",
         "sharedvideo": "Share a YouTube video",
