--- a/lang/main-cs.json
+++ b/lang/main-cs.json
@@ -260,6 +260,7 @@
         "shareVideoLinkError": "Zadejte prosím správný odkaz na youtube video.",
         "shareVideoTitle": "Sdílet obraz",
         "shareYourScreen": "Sdílet obrazovku",
+        "shareScreen": "Sdílet obrazovku",
         "shareYourScreenDisabled": "Sdílení obrazovky vypnuto.",
         "shareYourScreenDisabledForGuest": "Hosté nemohou sdílet obrazovku.",
         "startLiveStreaming": "Spustit živý stream",
@@ -640,6 +641,7 @@
         "profile": "Upravit váš profil",
         "raiseHand": "Přihlásit / Odhlásit se o slovo",
         "raiseYourHand": "",
+        "raiseYourHandText": "",
         "Settings": "Nastavení",
         "sharedvideo": "Sdílet obraz YouTube videa",
         "shareRoom": "",
