--- a/lang/main-ru.json
+++ b/lang/main-ru.json
@@ -306,6 +306,7 @@
         "shareVideoLinkError": "Пожалуйста, укажите корректную ссылку Youtube.",
         "shareVideoTitle": "Поделиться видео",
         "shareYourScreen": "Показать экран",
+        "shareScreen": "Показать экран",
         "shareYourScreenDisabled": "Демонстрация экрана отключена",
         "shareYourScreenDisabledForGuest": "Гости не могут демонстрировать экран",
         "startLiveStreaming": "Начать трансляцию",
@@ -807,6 +808,7 @@
         "profile": "Редактировать профиль",
         "raiseHand": "Хочу говорить",
         "raiseYourHand": "Поднять руку",
+        "raiseYourHandText": "Поднять руку",
         "security": "Настройки безопасности",
         "shareRoom": "Отправить приглашение",
         "sharedvideo": "Видео YouTube",
