Conference made adaptive

--- a/lang/main-af.json
+++ b/lang/main-af.json
@@ -595,7 +595,7 @@
         "login": "Meld aan",
         "logout": "Meld af",
         "lowerYourHand": "",
-        "moreActions": "Meer aksies",
+        "moreActions": "Aksies",
         "mute": "Demp / ontdemp",
         "openChat": "",
         "pip": "Betree Prent-in-Prent-modus",
