--- a/lang/main-bg.json
+++ b/lang/main-bg.json
@@ -641,7 +641,7 @@
         "login": "Влез",
         "logout": "Изход",
         "lowerYourHand": "Махни искането на думата",
-        "moreActions": "Още опции",
+        "moreActions": "Опции",
         "mute": "Спиране/пускане на микрофона",
         "noAudioSignalTitle": "Няма сигнал идващ от микрофона!",
         "noAudioSignalDesc": "Ако не сте спрели звука на устройството от системните настройки, сменете с друго устройство.",
