--- a/lang/main-ca.json
+++ b/lang/main-ca.json
@@ -646,7 +646,7 @@
         "login": "Inicia sessió",
         "logout": "Tanca la sessió",
         "lowerYourHand": "Abaixa la mà",
-        "moreActions": "Més accions",
+        "moreActions": "Accions",
         "moreOptions": "Més opcions",
         "mute": "Silencia o activa el so",
         "muteEveryone": "Silencia tothom",
