--- a/lang/main-da.json
+++ b/lang/main-da.json
@@ -641,7 +641,7 @@
         "login": "Log ind",
         "logout": "Log ud",
         "lowerYourHand": "Ta hånden ned",
-        "moreActions": "Flere handlinger",
+        "moreActions": "Handlinger",
         "moreOptions": "Flere indstillinger",
         "mute": "Slå lyd fra / Slå lyd til",
         "muteEveryone": "Slå lyd fra for alle",
