--- a/lang/main-de.json
+++ b/lang/main-de.json
@@ -760,7 +760,7 @@
         "login": "Anmelden",
         "logout": "Abmelden",
         "lowerYourHand": "Hand senken",
-        "moreActions": "Weitere Einstellungen",
+        "moreActions": "Einstellungen",
         "moreOptions": "Weitere Optionen",
         "mute": "Stummschaltung aktivieren / deaktivieren",
         "muteEveryone": "Alle stummschalten",
