--- a/lang/main-et.json
+++ b/lang/main-et.json
@@ -640,7 +640,7 @@
         "login": "Logi sisse",
         "logout": "Logi välja",
         "lowerYourHand": "Langeta kätt",
-        "moreActions": "Rohkem tegevusi",
+        "moreActions": "Tegevusi",
         "moreOptions": "Rohkem valikuid",
         "mute": "Mikrofon sisse/välja",
         "muteEveryone": "Vaigista kõikide mikrofonid",
