--- a/lang/main-frCA.json
+++ b/lang/main-frCA.json
@@ -623,7 +623,7 @@
         "login": "Connexion",
         "logout": "Déconnexion",
         "lowerYourHand": "Abaisser votre main",
-        "moreActions": "Plus d'actions",
+        "moreActions": "D'actions",
         "mute": "Activer / Réactiver le son",
         "noAudioSignalTitle": "Il n'y a pas d'entrée provenant de votre micro !",
         "noAudioSignalDesc": "Si vous n'avez pas délibérément coupé le son des paramètres du système ou du matériel, envisagez de changer le périphérique.",
