--- a/lang/main-gl.json
+++ b/lang/main-gl.json
@@ -628,7 +628,7 @@
         "login": "Inicio de sesión",
         "logout": "Saír",
         "lowerYourHand": "Baixar a man",
-        "moreActions": "Accións complementarias",
+        "moreActions": "Accións",
         "mute": "Silenciar / Activar",
         "noAudioSignalTitle": "Non hai sinal de entrada desde o seu micro!",
         "noAudioSignalDesc": "Se vostede non o silenciou adrede na configuración do seu sistema ou hardware, considere cambiar de dispositivo.",
