--- a/lang/main-hr.json
+++ b/lang/main-hr.json
@@ -600,7 +600,7 @@
         "login": "Prijava",
         "logout": "Odjava",
         "lowerYourHand": "Spusti ruku",
-        "moreActions": "Više akcija",
+        "moreActions": "Akcija",
         "mute": "Isključi / Uključi zvuk",
         "openChat": "Otvori čavrljanje",
         "pip": "Otvori način slika-u-slici",
