--- a/lang/main-it.json
+++ b/lang/main-it.json
@@ -756,7 +756,7 @@
         "login": "Accedi",
         "logout": "Scollegati",
         "lowerYourHand": "Abbassa la mano",
-        "moreActions": "Più azioni",
+        "moreActions": "Azioni",
         "moreOptions": "Più opzioni",
         "mute": "Attiva / Disattiva microfono",
         "muteEveryone": "Zittisci tutti",
