--- a/lang/main-lt.json
+++ b/lang/main-lt.json
@@ -641,7 +641,7 @@
         "login": "Prisijungti",
         "logout": "Atsijungti",
         "lowerYourHand": "Nuleisti ranką",
-        "moreActions": "Daugiau veiksmų",
+        "moreActions": "Veiksmų",
         "moreOptions": "Daugiau parinkčių",
         "mute": "Begarsis / Su garsu",
         "muteEveryone": "Nutildyti visus",
