--- a/lang/main-lv.json
+++ b/lang/main-lv.json
@@ -636,7 +636,7 @@
         "login": "Ierakstīties",
         "logout": "Izrakstīties",
         "lowerYourHand": "Nolaist roku",
-        "moreActions": "Vairāk rīcību",
+        "moreActions": "Rīcību",
         "moreOptions": "Vairāk izvēļu",
         "mute": "Noklusināt/apskaņot (mikrofons (iesl./izsl.))",
         "muteEveryone": "Noklusināt visus dalībniekus",
