--- a/lang/main-mn.json
+++ b/lang/main-mn.json
@@ -640,7 +640,7 @@
         "login": "Нэвтрэх",
         "logout": "Гарах",
         "lowerYourHand": "Гараа болих",
-        "moreActions": "Бусад үйлдэл",
+        "moreActions": "Yйлдэл",
         "moreOptions": "Бусад тохиргоо",
         "mute": "Дуу хаах/нээх",
         "muteEveryone": "Бүх дууг хаах",
