--- a/lang/main-nl.json
+++ b/lang/main-nl.json
@@ -727,7 +727,7 @@
         "login": "Aanmelden",
         "logout": "Afmelden",
         "lowerYourHand": "Uw hand laten zakken",
-        "moreActions": "Meer acties",
+        "moreActions": "Acties",
         "moreOptions": "Meer opties",
         "mute": "Dempen / Dempen opheffen",
         "muteEveryone": "Iedereen dempen",
