--- a/lang/main-pt.json
+++ b/lang/main-pt.json
@@ -623,7 +623,7 @@
         "login": "Iniciar sessão",
         "logout": "Encerrar sessão",
         "lowerYourHand": "Baixar a mão",
-        "moreActions": "Mais ações",
+        "moreActions": "Ações",
         "mute": "Mudo / Não mudo",
         "noAudioSignalTitle": "",
         "noAudioSignalDesc": "",
