--- a/lang/main-sk.json
+++ b/lang/main-sk.json
@@ -730,7 +730,7 @@
         "login": "Prihlásiť",
         "logout": "Odhlásiť",
         "lowerYourHand": "Dať dole ruku",
-        "moreActions": "Viac akcií",
+        "moreActions": "Akcií",
         "moreOptions": "Viac možností",
         "mute": "Vypnúť / Zapnúť mikrofón",
         "muteEveryone": "Všetkých stlmiť",
