--- a/lang/main-sr.json
+++ b/lang/main-sr.json
@@ -648,7 +648,7 @@
     "login": "Пријава",
     "logout": "Одјава",
     "lowerYourHand": "Спусти руку",
-    "moreActions": "Вишe акција",
+    "moreActions": "Aкција",
     "mute": "Искључи / Укључи звук",
     "openChat": "Отвори чет",
     "pip": "Отвори слику-у-слици",
