--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -639,7 +639,7 @@
         "login": "Log in",
         "logout": "Log out",
         "lowerYourHand": "Lower your hand",
-        "moreActions": "More actions",
+        "moreActions": "Actions",
         "mute": "Mute / Unmute",
         "openChat": "Open chat",
         "pip": "Enter Picture-in-Picture mode",
