--- a/lang/main-fi.json
+++ b/lang/main-fi.json
@@ -595,7 +595,7 @@
         "login": "Kirjaudu sisään",
         "logout": "Kirjaudu ulos",
         "lowerYourHand": "Laske käsi",
-        "moreActions": "Lisää toimintoja",
+        "moreActions": "Toimintoja",
         "mute": "Mykistys päällä/pois",
         "openChat": "Avaa chatti",
         "pip": "Siirry Kuva kuvassa (PiP) -tilaan",
