--- a/lang/main-id.json
+++ b/lang/main-id.json
@@ -650,7 +650,7 @@
         "login": "Login",
         "logout": "Logout",
         "lowerYourHand": "Lower your hand",
-        "moreActions": "More actions",
+        "moreActions": "Actions",
         "moreOptions": "More options",
         "mute": "Mute / Unmute",
         "muteEveryone": "Mute everyone",
