--- a/lang/main-is.json
+++ b/lang/main-is.json
@@ -646,7 +646,7 @@
         "login": "Innskráning",
         "logout": "Útskráning",
         "lowerYourHand": "Leggja niður höndina",
-        "moreActions": "Fleiri aðgerðir",
+        "moreActions": "Aðgerðir",
         "moreOptions": "Fleiri valkostir",
         "mute": "Þagga/Kveikja á hljóði",
         "muteEveryone": "Þagga niður í öllum",
