Conference made adaptive

--- a/lang/main-cs.json
+++ b/lang/main-cs.json
@@ -634,7 +634,7 @@
         "login": "Přihlásit se",
         "logout": "Odhlásit",
         "lowerYourHand": "",
-        "moreActions": "Více možností",
+        "moreActions": "Možností",
         "mute": "Ztlumit / Zesílit",
         "openChat": "",
         "pip": "",
