--- a/lang/main-esUS.json
+++ b/lang/main-esUS.json
@@ -717,7 +717,7 @@
         "login": "Inicio de sesión",
         "logout": "Cierre de sesión",
         "lowerYourHand": "Bajar la mano",
-        "moreActions": "Más acciones",
+        "moreActions": "Acciones",
         "moreOptions": "Más opciones",
         "mute": "Activar o silenciar el micrófono",
         "muteEveryone": "Silenciar a todos",
