--- a/lang/main-it.json
+++ b/lang/main-it.json
@@ -594,7 +594,7 @@
         "login": "Login",
         "logout": "Logout",
         "lowerYourHand": "Abbassa la mano",
-        "moreActions": "Più azioni",
+        "moreActions": "Azioni",
         "moreOptions": "Più opzioni",
         "mute": "Microfono Attiva / Disattiva",
         "openChat": "Apri una chat",
