--- a/lang/main-ptBR.json
+++ b/lang/main-ptBR.json
@@ -642,7 +642,7 @@
         "login": "Iniciar sessão",
         "logout": "Encerrar sessão",
         "lowerYourHand": "Baixar a mão",
-        "moreActions": "Mais ações",
+        "moreActions": "Ações",
         "mute": "Mudo / Não mudo",
         "noAudioSignalTitle": "Não há entrada de áudio vindo do seu microfone!",
         "noAudioSignalDesc": "Se você não o desativou propositalmente das configurações do sistema ou do hardware, considere trocar o dispositivo.",
