--- a/lang/main-ru.json
+++ b/lang/main-ru.json
@@ -791,7 +791,7 @@
         "login": "Войти",
         "logout": "Завершить сеанс",
         "lowerYourHand": "Опустить руку",
-        "moreActions": "Больше действий",
+        "moreActions": "действий",
         "moreOptions": "Больше настроек",
         "mute": "Микрофон (вкл./выкл.)",
         "muteEveryone": "Выкл. микрофон у всех",
