--- a/lang/main-fr.json
+++ b/lang/main-fr.json
@@ -706,7 +706,7 @@
         "login": "Connexion",
         "logout": "Déconnexion",
         "lowerYourHand": "Baisser la main",
-        "moreActions": "Plus d'actions",
+        "moreActions": "Actions",
         "moreOptions": "Plus d'options",
         "mute": "Muet / Actif",
         "muteEveryone": "Couper le micro à tout le monde",
