--- a/lang/main.json
+++ b/lang/main.json
@@ -760,7 +760,7 @@
         "login": "Login",
         "logout": "Logout",
         "lowerYourHand": "Lower your hand",
-        "moreActions": "More actions",
+        "moreActions": "Actions",
         "moreOptions": "More options",
         "mute": "Mute / Unmute",
         "muteEveryone": "Mute everyone",
