Added unmute all functionality

--- a/lang/main-ru.json
+++ b/lang/main-ru.json
@@ -538,6 +538,8 @@
         "muted": "Вы начали разговор без звука.",
         "mutedRemotelyDescription": "Вы всегда можете включить микрофон, когда будете готовы говорить. Отключите его, когда закончите, чтобы не транслировать шумы в конференцию.",
         "mutedRemotelyTitle": "{{participantDisplayName}} отключил Вам микрофон!",
+        "unMutedRemotelyTitle": "{{participantDisplayName}} включил Вам микрофон!",
+        "unMutedRemotelyDescription": "Вы всегда можете отключить микрофон, когда будете не готовы говорить",
         "mutedTitle": "Вы без звука!",
         "newDeviceAction": "Использовать",
         "newDeviceAudioTitle": "Обнаружено новое аудиоустройство",
@@ -749,6 +751,7 @@
             "moreOptions": "Меню доп. настроек",
             "mute": "Вкл/Выкл звук",
             "muteEveryone": "Выкл. микрофон у всех",
+            "unMuteEveryone": "Вкл. микрофон у всех",
             "pip": "Вкл/Выкл режим Картинка-в-картинке",
             "privateMessage": "Отправить личное сообщение",
             "profile": "Редактировать профиль",
@@ -882,6 +885,7 @@
     },
     "videothumbnail": {
         "domute": "Выключить звук",
+        "doUnMute": "Включить звук",
         "domuteOthers": "Выключить остальных",
         "flip": "Отразить",
         "grantModerator": "Сделать модератором",
