--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -447,6 +447,8 @@
         "mutedRemotelyTitle": "You have been muted by {{participantDisplayName}}!",
         "mutedRemotelyDescription": "You can always unmute when you're ready to speak. Mute back when you're done to keep noise away from the meeting.",
         "passwordRemovedRemotely": "$t(lockRoomPasswordUppercase) removed by another participant",
+        "unMutedRemotelyTitle": "You have been un muted by {{participantDisplayName}}!",
+        "unMutedRemotelyDescription": "You can always mute when you're not ready to speak.",
         "passwordSetRemotely": "$t(lockRoomPasswordUppercase) set by another participant",
         "raisedHand": "{{name}} would like to speak.",
         "somebody": "Somebody",
@@ -615,6 +617,7 @@
             "videoblur": "",
             "privateMessage": "Send private message",
             "muteEveryone": "Mute everyone",
+            "unMuteEveryone": "Unmute everyone",
             "moreOptions": "Show more options",
             "help": "Help",
             "download": "Download our apps"
@@ -715,6 +718,7 @@
     },
     "videothumbnail": {
         "domute": "Mute",
+        "doUnMute": "Unmute",
         "flip": "Flip",
         "kick": "Kick out",
         "moderator": "Moderator",
